add swagger and filter/

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -327,7 +327,10 @@
         <header>
             <h1>
                 <span>{{ emoji_prefix }} DoggyGallery</span>
-                <a href="/static/faq.html" class="faq-link">FAQ</a>
+                <div style="display: flex; gap: 8px;">
+                    <a href="/static/filter.html" class="faq-link">🔍 Filter</a>
+                    <a href="/static/faq.html" class="faq-link">FAQ</a>
+                </div>
             </h1>
             <div class="breadcrumb">
                 <a href="/">Home</a>
